# git-dataframe-tools

./: .coverage  .gitignore  APPENDIX-DUCKDB.md  APPENDIX.md  BACKEND-PLAN.md  CLI-REFACTORING.md  CODE_IMPROVEMENTS.md  DULWICH-PLAN.MD  GEMINI.md  GIT-SCOREBOARD.md  LLM-RUNBOOK.md  LOW_PLAN.md  MIGRATE-TO-GITPYTHON.md  PLAN.md  README.md  REFACTORING_PLAN.md  ROPE-REQUIREMENTS.md  RUNBOOK-git-extract-commits.md  RUNBOOK-git2df.md  STATE.md  TECHNICAL_WALKTHROUGH.md  TEST-IMPROVEMENT-PLAN.md  TESTFIX.md  commit_message.txt  commits.parquet  mypy.ini  pyproject.toml  pytest_output.txt  regenerate_golden_files.py  remote_commits.parquet  requirements.txt  scoreboard.py  temp_dulwich_poc.py  unit-test-approaches.md  x.txt  x_dulwich_poc.py
src/git2df/: __init__.py  backend_interface.py  backends.py  dataframe_builder.py  date_utils.py  dulwich_backend.py  git_cli_utils.py  git_parser.py  pygit2_backend.py
src/git2df/dulwich/: backend.py  commit_filters.py  commit_formatter.py  commit_walker.py  date_utils.py  diff_parser.py  repo_handler.py
src/git2df/git_parser/: __init__.py  _chunk_processor.py  _commit_metadata_parser.py  _file_stat_parser.py
src/git_dataframe_tools/: config_models.py  git_python_repo_info_provider.py  git_repo_info_provider.py  git_stats_pandas.py  git_utils.py  logger.py
src/git_dataframe_tools/cli/: _data_loader.py  _display_utils.py  _validation.py  common_args.py  git_df.py  scoreboard.py
src/git_scoreboard/: config_models.py  git_df.py  git_extract_commits.py  git_stats.py  git_stats_pandas.py  git_utils.py  logger.py  scoreboard.py
tests/: REGENERATE_GOLDEN_FILES.md  conftest.py  temp_test_hex_mocking.py  test_backend_consistency.py  test_compatibility.py  test_config_models_date_range.py  test_config_models_period_parsing.py  test_df_integration.py  test_dulwich_diff_parser.py  test_dulwich_remote.py  test_failing_case.py  test_get_commits_df_no_filters.py  test_get_commits_df_with_all_filters.py  test_get_commits_df_with_all_filters_and_paths.py  test_get_commits_df_with_filters.py  test_git2df_backends.py  test_git2df_cli_utils.py  test_git2df_dataframe_builder.py  test_git2df_dulwich_backend.py  test_git2df_integration.py  test_git2df_parser.py  test_git2df_public_api.py  test_git_assumptions.py  test_git_df.py  test_git_df_cli.py  test_git_extract_commits.py  test_git_integration.py  test_git_interaction.py  test_git_stats_pandas.py  test_pygit2_backend.py  test_readme.py  test_runbook.py  test_scoreboard.py  test_scoreboard_df_path.py
tests/data/: commit_centric.json  no_file_stats.json  single_commit.json  test_file_changes.json
tests/data/golden_files/: basic_DulwichRemoteBackend.json  basic_GitCliBackend.json  basic_Pygit2Backend.json  filtered_DulwichRemoteBackend-author_Test User.json  filtered_DulwichRemoteBackend-grep_Second commit.json  filtered_DulwichRemoteBackend-include_paths_['file1.txt'].json  filtered_GitCliBackend-author_Test User.json  filtered_GitCliBackend-exclude_paths_['file2.txt']-include_paths_['file1.txt'].json  filtered_GitCliBackend-exclude_paths_['file2.txt'].json  filtered_Pygit2Backend-author_Test User.json  filtered_Pygit2Backend-grep_Second commit.json  single_initial_commit_DulwichRemoteBackend.json  unusual_chars_GitCliBackend.json
tests/fixtures/: git_cli_fixtures.py  git_helpers.py  golden_files.py  markdown_utils.py  pygit2_fixtures.py  remote_repo_fixtures.py  sample_data.py
