[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-dataframe-tools"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # TODO: Update with actual author details
]
description = "A command-line tool to analyze git history and rank authors by total lines changed."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "tqdm>=4.0.0",
    "parsedatetime",
    "pandas",
    "pyarrow",
    "python-dateutil",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
git-scoreboard = "git_scoreboard.scoreboard:main"
git-df = "git_scoreboard.git_df:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
