[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-dataframe-tools"
version = "0.1.0"
authors = [
  { name="Ranjan Bagchi", email="ranjan.bagchi@gmail.com" }, 
]
description = "A command-line tool to analyze git history and rank authors by total lines changed."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "tqdm>=4.0.0",
    "parsedatetime",
    "pandas",
    "pyarrow",
    "python-dateutil",
    "GitPython",
    "pytest>=7.4.4",
    "dulwich>=0.21.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["git_dataframe_tools*", "git2df*"]

[project.scripts]
git-scoreboard = "git_dataframe_tools.cli.scoreboard:main"
git-df = "git_dataframe_tools.cli.git_df:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest-cov",
    "radon",
    "ruff",
    "black",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
